# GNNs_playground

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/raw/: .gitignore
experiments/: .gitignore  over_smoothing_exp.py  over_squashing_exp.py  rewiring_exp.py
gnn_tools/: download_datasets.py
gnns_playground/: __init__.py
gnns_playground/metrics/: __init__.py  over_smoothing.py  over_squashing.py
gnns_playground/models/: __init__.py  gat.py  gcn.py
gnns_playground/rewiring/: __init__.py  fosr.py  sdrf.py
gnns_playground/utils/: __init__.py  graph_utils.py
tests/: __init__.py  test_gpu_cpu.py  test_metrics.py  test_models.py  test_rewiring.py  test_utils.py
